# prediction-market-agent

./: .env.example  .gitignore  README.md
agent/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
agent/src/: __init__.py  agent.py  api.py  chatbot.py  config.py  contract_interface.py  health_check.py  initialize_agent.py  market_actions.py  price_oracle.py  setup.py
agent/tests/: __init__.py  test_agent.py  test_config.py  test_market_actions.py
contracts/: .gitignore  README.md  deployments.json  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: PredictionMarket.sol
contracts/scripts/: deploy.js
contracts/test/: PredictionMarket.test.js
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatCard.tsx  CreateMarketCard.tsx  MarketInfoCard.tsx  PlaceBetCard.tsx  PriceCard.tsx  WalletCard.tsx
